--- a/templates/item/item-armorUpgrade-sheet.hbs
+++ b/templates/item/item-armorUpgrade-sheet.hbs
@@ -6,7 +6,7 @@
 
 <form class="{{ cssClass }}" autocomplete="off">
   <header class="sheet-header">
-    <img class="profile-img" src="{{ item.system.img }}" data-edit="img" title="{{ item.system.img }}" />
+    <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.img }}" />
     <div class="header-fields">
       <h1 class="upgradeName">
         <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
