--- a/templates/actor/parts/npc-status.hbs
+++ b/templates/actor/parts/npc-status.hbs
@@ -19,7 +19,7 @@
                             <label for="{{ ability }}"
                                    class="resource-label rollable"
                                    data-rollable
-                                   data-roll="d20+{{ skill.value }}+@{{ability}}.mod"
+                                   data-roll="d20+{{#Sum skill.value skill.modifiers}}{{/Sum}}+@{{ability}}.mod"
                                    data-label="{{ actor.name }} performed a {{ skill.label }} roll using {{ ability }}">
                                 {{ ability }}
                             </label>
@@ -34,7 +34,7 @@
                            class="fas fa-minus-square fakebutton nobackground">
 
                         </i>
-                        {{#Sum skill.base skill.modifiers}}{{/Sum}}
+                        {{#Sum skill.value skill.modifiers skill.base}}{{/Sum}}
                         <i style="padding: 3px"
                            data-skilladdition
                            data-skill="{{ skill.id }}"
