Skill Roll Fixes

--- a/templates/actor/parts/npc-status.hbs
+++ b/templates/actor/parts/npc-status.hbs
@@ -34,7 +34,7 @@
                            class="fas fa-minus-square fakebutton nobackground">
 
                         </i>
-                        {{#Sum skill.value skill.modifiers skill.base}}{{/Sum}}
+                        {{#Sum3 skill.value skill.modifiers skill.base}}{{/Sum3}}
                         <i style="padding: 3px"
                            data-skilladdition
                            data-skill="{{ skill.id }}"
