Give Item Started / Skill Roll Fix / SUM Fix

--- a/templates/actor/items/equipped-armor.hbs
+++ b/templates/actor/items/equipped-armor.hbs
@@ -62,17 +62,17 @@
                                    data-equip
                                    data-item-id="{{ item._id }}"
                                    class="item-control"
-                                   title="Unequip an armor">
+                                   title="Unequip an item">
                                     <i class="fas fa-tshirt"></i>
                                 </a>
                                 {{#DifferentFrom item.system.description ""}}
-                                    <a style="float: right; margin-right: 10px"
-                                    data-sendToChat
-                                    data-item-id="{{ item._id }}"
-                                    class="item-control"
-                                    title="Send description to Chat">
-                                        <i class="fa-solid fa-comment"></i>
-                                    </a>
+                                <a style="float: right; margin-right: 10px"
+                                   data-sendToChat
+                                   data-item-id="{{ item._id }}"
+                                   class="item-control"
+                                   title="Send description to Chat">
+                                    <i class="fa-solid fa-comment"></i>
+                                </a>
                                 {{/DifferentFrom}}
                             </details>
                             </div>
