--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -14,7 +14,8 @@
                               <tr>
                                   <td class="profile-image-td" style="padding: 10px; padding-top: 0px">
                                       <img src="{{ actor.img }}" data-edit="img" title="{{ actor.name }}" /><br />
-                                      <input type="text" name="name" value="{{ actor.name }}" />LVL:{{system.level}}
+                                      <input type="text" name="name" value="{{ actor.name }}" />
+                                      {{#GreaterThan system.level 2}}LVL:{{system.level}}{{/GreaterThan}}
                                   </td>
                               </tr>
                               <tr></tr>
