--- a/templates/item/item-ammo-sheet.hbs
+++ b/templates/item/item-ammo-sheet.hbs
@@ -26,8 +26,8 @@
         </tr>
       </table>
     </div>
+      <br /><button class="fakebutton trade" data-trade="{{item._id}}">Give Away</button>
   </header>
-
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
