--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -56,7 +56,7 @@
             </tr>
             <tr>
               <td>
-                <input type="number" name="system.baseCost.value" value="{{ system.baseCost.value }}" />
+                <input type="number" name="system.cost" value="{{ system.cost }}" />
               </td>
               <td>
                   <input type="number" name="system.armorClass.value" value="{{ system.armorClass.value }}" />
