add condition roll from rolltable

--- a/templates/item/parts/weapon-damage.hbs
+++ b/templates/item/parts/weapon-damage.hbs
@@ -68,7 +68,7 @@
       />
     </div>
     <div>
-      <select name="system.critical.condition">
+      <select class="w-full" name="system.critical.condition">
         {{selectOptions conditions selected=system.critical.condition blank="None"}}
       </select>
     </div>
